[gd_scene load_steps=2 format=3 uid="uid://ltqc7ouabfeq"]

[ext_resource type="Script" path="res://Scripts/menu.gd" id="1_tvrjk"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_tvrjk")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_left = 424.0
offset_top = 215.0
offset_right = 705.0
offset_bottom = 616.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="New Game" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Play"

[node name="Help" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Help"

[node name="About" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "About"

[node name="Quit" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Quit"

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 348.0
offset_top = 57.0
offset_right = 784.0
offset_bottom = 170.0
theme_override_font_sizes/font_size = 80
text = "Main Menu"

[connection signal="pressed" from="MarginContainer/VBoxContainer/New Game" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Help" to="." method="_on_options_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/About" to="." method="_on_about_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
